<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.moditectgen</groupId>
    <artifactId>ModitectGen</artifactId>
    <version>1.0.0</version>
    
    <name>ModitectGen</name>
    
    <properties>
        <javafx.version>15.0.1</javafx.version>          
        <mainClass>org.moditectgen.App</mainClass>
        <moduleName>ModitectGen</moduleName>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> 
        <maven.compiler.source>15</maven.compiler.source>
        <maven.compiler.target>15</maven.compiler.target>       
    </properties>
    
    <repositories>
        <repository>
            <id>bintray-jerady-maven</id>
            <name>bintray</name>
            <url>https://dl.bintray.com/jerady/maven</url>            
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>                
    </repositories>
    
    <pluginRepositories>
        <pluginRepository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>bintray-jerady-maven</id>
            <name>bintray-plugins</name>
            <url>https://dl.bintray.com/jerady/maven</url>
        </pluginRepository>
    </pluginRepositories>

    <organization>
        <!-- Used as the 'Vendor' for JNLP generation -->
        <name>IT Architects</name>
    </organization>
    
    
    <build>
        <pluginManagement>
            <plugins>                               
                <plugin>
                    <groupId>org.moditect</groupId>
                    <artifactId>moditect-maven-plugin</artifactId>
                    <version>1.0.0.RC1</version>
                </plugin>
                <plugin>
                    <groupId>com.coderplus.maven.plugins</groupId>
                    <artifactId>copy-rename-maven-plugin</artifactId>
                    <version>1.0.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.1.1</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>1.6.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                </plugin>                                                               
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>15</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-libs</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/modules</outputDirectory>
                            <includeScope>runtime</includeScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.coderplus.maven.plugins</groupId>
                <artifactId>copy-rename-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-target</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <sourceFile>${project.build.directory}/${project.build.finalName}.jar</sourceFile>
                            <destinationFile>${project.build.directory}/modules/${project.build.finalName}.jar</destinationFile>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.moditect</groupId>
                <artifactId>moditect-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>add-module-info-to-deps</id>
                        <phase>package</phase>
                        <goals>
                            <goal>add-module-info</goal>
                        </goals>
                        <configuration>
                            <overwriteExistingFiles>true</overwriteExistingFiles>
                            <jvmVersion>14</jvmVersion>
                            <modules>  
                                                                                             
                                
                            </modules>                                                                              
                            <module>                                                                   
                                <moduleInfo>
                                    <name>ModitectGen</name>  
                                    <opens>org.moditectgen;</opens>                                    
                                </moduleInfo>                                  
                            </module>   
                            <jdepsExtraArgs>
                                <arg>--multi-release</arg>
                                <arg>11</arg>
                            </jdepsExtraArgs>                       
                        </configuration>
                    </execution>
                </executions>
            </plugin>                        
        </plugins>
    </build>
    
    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
        </dependency>        
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency> 
                                            
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.0.1</version> 
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>           
        </dependency>  
        <dependency>
            <groupId>de.jensd</groupId>
            <artifactId>fontawesomefx-commons</artifactId>
            <version>11.0</version> 
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>           
        </dependency>
        <dependency>
            <groupId>de.jensd</groupId>
            <artifactId>fontawesomefx-controls</artifactId>
            <version>11.0</version>   
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>         
        </dependency>
        <dependency>
            <groupId>de.jensd</groupId>
            <artifactId>fontawesomefx-fontawesome</artifactId>
            <version>4.7.0-11</version>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>            
        </dependency> 
        <dependency>
            <groupId>org.fxmisc.richtext</groupId>
            <artifactId>richtextfx</artifactId>
            <version>0.10.5</version>
        </dependency>                                                        
                                                                                               
    </dependencies>
    
    
    <profiles>
        <profile>
            <id>macos</id>
            <activation>
                <activeByDefault>true</activeByDefault>
                <os>
                    <family>mac</family>
                </os>
            </activation>
            <properties>
                <bundle.type>pkg</bundle.type>
                <exec.executable>${java.home}/bin/java</exec.executable>
                <icons>${project.resources[0].directory}/img/osx/icon_1024x1024.icns</icons>                
                <param1></param1>                
                <param2></param2>
                <param3></param3>
                <param4></param4>
            </properties>
        </profile>
        <profile>
            <id>win</id>
            <activation>
                <activeByDefault>true</activeByDefault>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <properties>
                <bundle.type>msi</bundle.type>
                <exec.executable>${java.home}\bin\java</exec.executable> 
                <icons>${project.resources[0].directory}\img\win\icon_1024x1024.ico</icons>                               
                <param1>--win-menu</param1>
                <param2>--win-shortcut</param2>
                <param3></param3>
                <param4></param4>
            </properties>
        </profile> 
        <profile>
            <id>linux</id>
            <activation>
                <activeByDefault>true</activeByDefault>
                <os>
                    <family>unix</family>
                    <name>Linux</name>
                </os>
            </activation>
            <properties>
                <bundle.type>deb</bundle.type>
                <exec.executable>${java.home}/bin/java</exec.executable>                 
                <icons>${project.resources[0].directory}/img/linux/icon_1024x1024.png</icons>                
                <param1>--linux-shortcut</param1>                
                <param2></param2> 
                <param3></param3>
                <param4></param4>               
            </properties>
        </profile>       
        <profile>
            <id>package</id>                        
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.moditect</groupId>
                        <artifactId>moditect-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>create-runtime-image</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>create-runtime-image</goal>
                                </goals>
                                <configuration>
                                    <stripDebug>false</stripDebug>
                                    <compression>2</compression>
                                    <noHeaderFiles>true</noHeaderFiles>
                                    <noManPages>true</noManPages>                                    
                                    <outputDirectory>${project.build.directory}/jlink-image</outputDirectory>
                                    <modulePath>
                                        <path>${project.build.directory}/modules</path> <!--our modules-->
                                    </modulePath>
                                    <modules> <!--everything we need-->
                                        <module>${moduleName}</module>
                                        <module>java.base</module>
                                        <module>javafx.base</module>                                        
                                        <module>javafx.fxml</module>                                        
                                        <module>javafx.controls</module>
                                        <module>javafx.graphics</module>                                        
                                        <module>org.controlsfx.controls</module>
                                        <module>de.jensd.fx.fontawesomefx.commons</module>
                                        <module>de.jensd.fx.fontawesomefx.controls</module>
                                        <module>de.jensd.fx.fontawesomefx.fontawesome</module>                                        
                                        <module>jdk.charsets</module>                                        
                                    </modules>                                                                                                            
                                </configuration>
                            </execution> 
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>create-package</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>${java.home}/bin/jpackage</executable>
                                    <workingDirectory>${project.build.directory}</workingDirectory>
                                    <longModulepath>false</longModulepath>
                                    <environmentVariables>
                                        <JAVA_HOME>${java.home}</JAVA_HOME>
                                    </environmentVariables>
                                    <arguments>                                        
                                        <argument>--dest</argument>
                                        <argument>package</argument>
                                        <argument>--type</argument>
                                        <argument>${bundle.type}</argument>
                                        <argument>--verbose</argument>                                         
                                        <argument>--icon</argument>
                                        <argument>${icons}</argument>                                        
                                        <argument>--app-version</argument>
                                        <argument>1.0.0</argument>
                                        <argument>--copyright</argument>
                                        <argument>ITArchitects</argument>                                        
                                        <argument>--name</argument>
                                        <argument>ModiTectGen</argument>
                                        <argument>--runtime-image</argument>
                                        <argument>${project.build.directory}/jlink-image</argument>                                        
                                        <argument>--java-options</argument>
                                        <argument>--add-opens=javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons</argument> 
                                        <argument>--java-options</argument>    
                                        <argument>--add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls</argument>                                        
                                        <argument></argument>
                                        <argument>${param1}</argument>
                                        <argument>${param2}</argument>
                                        <argument>${param3}</argument>
                                        <argument>${param4}</argument>
                                        <argument>--module</argument>
                                        <argument>${moduleName}/${mainClass}</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>        
    </profiles>
</project>